--- a/src/components/RadiusControl.module.css
+++ b/src/components/RadiusControl.module.css
@@ -170,12 +170,22 @@
 
 @media (max-height: 700px) {
   .numberInput {
-    font-size: 38px;
-    width: 100px;
+    font-size: 32px;
+    width: 80px;
   }
 
   .presetChip {
     font-size: 14px;
-    height: 56px;
+    height: 36px;
+  }
+}
+
+@media (max-width: 767px) {
+  .sliderContainer {
+    height: 36px;
+  }
+
+  .presetsContainer {
+    gap: var(--space-1);
   }
 }
